# sleepBot

./: .dockerignore  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SETUP.md  TESTING_PLAN.md  alembic.ini  config.py  database.py  docker-compose.production.yml  docker-compose.yml  ecosystem.config.js  entrypoint.sh  init-db.sql  main.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 04d2a6bb3420_initial_migration.py  a1b2c3d4e5f6_reset_onboarding_for_timezone_ux.py
bot/handlers/: __init__.py  help.py  language.py  note.py  onboarding.py  quality.py  sleep.py  start.py  stats.py  wake.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/middlewares/: __init__.py  localization.py
bot/states/: __init__.py  onboarding.py
localization/: __init__.py  service.py
localization/translations/: en.json  et.json  ru.json
models/: __init__.py  base.py  sleep_session.py  user.py
repositories/: __init__.py  base.py  sleep_repository.py  user_repository.py
services/: __init__.py  sleep_service.py  statistics_service.py  user_service.py
tests/: conftest.py
tests/mock/: test_exporters.py  test_localization.py  test_repositories.py  test_sleep_service_validation.py  test_sql_injection_protection.py  test_statistics_service.py  test_user_service.py
tests/unit/: test_formatters.py  test_keyboards.py  test_logger.py
utils/: logger.py
utils/exporters/: __init__.py  csv_exporter.py  json_exporter.py
